--- a/wishlists/templates/wishlists/wishlist.html
+++ b/wishlists/templates/wishlists/wishlist.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-{% block extra_title %}My Wishlist{% endblock %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -12,10 +11,19 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container bg-sheer-white text-brown">
-    <h1 class="small-caps bold">My Wishlist</h1>
-    {% if wishlisted_products %}
-    <ul>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Products</h2>
+            {% if wishlisted_products %}
+            {% for c in current_categories %}
+            <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
+                <span
+                    class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+            </a>
+            {% endfor %}
+            <hr class="w-50 mb-1">
+            <ul>
         <li class="list-inline-item">
             <a href="{% url 'profile' %}" class="btn btn-outline-black rounded-0 mt-5 qty-submit margin-t1"><i
                     class="fas fa-user"></i> To User Profile</a>
@@ -35,58 +43,118 @@
             </form>
         </li>
     </ul>
+        </div>
+    </div>
     <div class="row">
-
-
-        {% for product in wishlisted_products %}
-        <div class="row valign-wrapper wishlist-row grey-bottom-border">
-            <div class="col s4">
-                <!--Product Details-->
-                <div class="image-container rounded my-5">
-                    {% if product.image %}
-                    <a href="{{ product.image.url }}" target="_blank">
-                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                    </a>
-                    {% else %}
-                    <a href="">
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                    </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="col s4 wishlist-info">
-                <a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
-                <p>€{{ product.price }}</p>
-                <div class="row">
-                    <!--Action Buttons-->
-                    <div class="col s12 center-align form-buttons">
-                        <a href="{% url 'product_detail' product.id %}"
-                            class="btn btn-outline-black rounded-0 mt-5 qty-submit block"><i
-                                class="fas fa-eye prefix"></i>
-                            Details</a>
-                        <form class="form inline-block" method="POST"
-                            action="{% url 'remove_from_wishlist' product.id %}">
-                            {% csrf_token %}
-                            <button class="btn btn-outline-black rounded-0 mt-5 qty-submit inline-block"
-                                id="remove-wishlist-btn_{{product.id}}" type="submit" name="action">
-                                <i class="fas fa-heart"></i> <span class="hide-on-small-only">Remove from
-                                    Wishlist</span>
-                            </button>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </form>
+        <div class="product-container col-10 offset-1">
+            <div class="row mt-1 mb-2">
+                <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                    <div class="sort-select-wrapper w-50">
+                        <select id="sort-selector"
+                            class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+                            </option>
+                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
+                                (low to high)</option>
+                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
+                                (high to low)</option>
+                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                                Rating (low to high)</option>
+                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                                Rating (high to low)</option>
+                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
+                                (A-Z)</option>
+                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
+                                (Z-A)</option>
+                            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                                Category (A-Z)</option>
+                            <option value="category_desc"
+                                {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                        </select>
                     </div>
                 </div>
             </div>
-
+            <div class="row">
+                {% for product in wishlisted_products %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+                        {% if product.image %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                alt="{{ product.name }}">
+                        </a>
+                        {% endif %}
+                        <div class="card-body pb-0">
+                            <p class="mb-0">{{ product.name }}</p>
+                        </div>
+                        <div class="card-footer bg-white pt-0 border-0 text-left">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
+                                    <div class="col s12 center-align form-buttons">
+                                        <a href="{% url 'product_detail' product.id %}"
+                                            class="btn btn-outline-black rounded-0 mt-1 qty-submit block"><i
+                                                class="fas fa-eye prefix"></i>
+                                            Details</a>
+                                        <form class="form inline-block" method="POST"
+                                            action="{% url 'remove_from_wishlist' product.id %}">
+                                            {% csrf_token %}
+                                            <button class="btn btn-outline-black rounded-0 mt-1 qty-submit inline-block"
+                                                id="remove-wishlist-btn_{{product.id}}" type="submit" name="action">
+                                                <i class="fas fa-heart"></i> <span class="hide-on-small-only">Remove
+                                                    from
+                                                    Wishlist</span>
+                                            </button>
+                                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        </form>
+                                    </div>
+                                    {% if product.category %}
+                                    <p class="small mt-1 mb-0">
+                                        <a class="text-muted"
+                                            href="{% url 'products' %}?category={{ product.category.name }}">
+                                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                        </a>
+                                    </p>
+                                    {% endif %}
+                                    {% if request.user.is_superuser %}
+                                    <small class="ml-1">
+                                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                    </small>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:1 %}
+                <div class="col-12 d-sm-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:2 %}
+                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:3 %}
+                <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:4 %}
+                <div class="col-12 d-none d-xl-block mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
         </div>
-        {% endfor %}
-        <div class="col s12 center-align">
-            <!--Navigation Buttons-->
-
-
-
-        </div>
-        {% else %}
+         {% else %}
         <div class="col s12 center-align">
             <p>Your wishlist is currently empty.</p>
             <a href="{% url 'products' %}" class="btn btn-black"> Browse all products</a>
@@ -94,7 +162,41 @@
         {% endif %}
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
 {% endblock %}
+
 {% block postloadjs %}
 {{ block.super }}
+<script type="text/javascript">
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
+    })
+</script>
+
+<script type="text/javascript">
+    $('#sort-selector').change(function () {
+        var selector = $(this);
+        var currentUrl = new URL(window.location);
+
+        var selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            var sort = selectedVal.split("_")[0];
+            var direction = selectedVal.split("_")[1];
+
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
 {% endblock %}
